--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ buildscript {
     }
 
     repositories {
-        mavenCentral()
         google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
         jcenter()
     }
     dependencies {
@@ -23,8 +24,8 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
         google()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
         jcenter()
     }
