--- a/net/build.gradle
+++ b/net/build.gradle
@@ -3,18 +3,22 @@ apply plugin: "kotlin-android"
 apply plugin: 'org.jetbrains.dokka'
 
 android {
-    compileSdkVersion 30
+    namespace 'com.drake.net'
+    compileSdk 30
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
     kotlinOptions {
+        jvmTarget = "17"
         freeCompilerArgs = ["-Xinline-classes", "-Xallow-result-return-type"]
     }
 
@@ -38,3 +42,4 @@ dependencies {
     compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 }
+
